# deepagents-cli-test

./: .gitignore  CLAUDE.md  README.md  agent_factory.py  cli.py  math_cli.py  math_tools.py  optimizer.py  pyproject.toml  requirements.txt  simple_agent.py
datasets/: examples.json  metrics.py
docs/: dspy-only-plan.md  dspy-overview.md  integration-plan-alternative.md  integration-plan.md  langgraph-deepagents.md
optimized_prompts/: math_assistant_openai_gpt-4.json
prototype/: README.md  pyproject.toml
prototype/src/math_assistant/: __init__.py
prototype/src/math_assistant/cli/: __init__.py  agent_factory.py  math_cli.py  math_tools.py
prototype/src/math_assistant/optimization/: __init__.py  cli.py  optimizer.py
